--- a/src/components/Shop.css
+++ b/src/components/Shop.css
@@ -1,6 +1,7 @@
 .wapuu_shop {
     display: flex;
-  align-items: stretch;
+    align-items: stretch;
+    background-color: white;
 }
 
 .wapuu_shop form button.button.button-primary {
